# GranitePass

./: .env  .env.example  .gitignore  pyproject.toml  run.py
database/: db.json
granitepass/: __init__.py  config.py  database.py  database_controllers.py  encryption.py  pages.py  route_controllers.py  routes.py
granitepass/static/css/: homestyle.css  styles.css
granitepass/static/js/: scripts.js
granitepass/templates/: base.html  homepage.html  login.html
