[tool.poetry]
name = "granitepass"
version = "0.1.0"
description = ""
authors = ["Nercino Neto <njbneto21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
bcrypt = "^4.1.2"
cryptography = "^42.0.5"
tinydb = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
